k8s/dev/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
  namespace: dev
  labels:
    app: app-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      containers:
        - name: app-service
          image: app:dev
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: management
              containerPort: 8082
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: management
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: management
              scheme: HTTP
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          startupProbe:
            httpGet:
              path: /actuator/health
              port: management
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dev
  labels:
    app: app-service
spec:
  selector:
    app: app-service
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: management
      port: 8082
      targetPort: management
      protocol: TCP
  type: ClusterIP
