k8s/dev/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: auth:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: dev
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
