k8s/dev/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.6.0
          command: ["/opt/keycloak/bin/kc.sh", "start-dev", "--import-realm"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: realm-volume
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: realm-volume
          configMap:
            name: keycloak-realm
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: dev
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
