k8s/dev/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
        - name: search-service
          image: search:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: dev
spec:
  selector:
    app: search-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: management
      port: 8083
      targetPort: 8083
